Home Text Alignment is fixed

--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -54,6 +54,7 @@
 
 .home__description {
   max-width: 400px;
+  text-align: justify;
   margin-bottom: var(--mb-3);
 }
 
